- fix undefined error
- add delete action to query

--- a/client/cinarratest.html
+++ b/client/cinarratest.html
@@ -81,7 +81,7 @@
                 {{coolDate}}
         </td>
         <td class="right-column">
-            <a class="list-name {{name_class}}" href="/delete/{{_id}}">
+            <a class="remove {{name_class}}" href="#">
                 удалить
             </a>
         </td>
